--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>video world</title>
-    <link rel="icon" type="image/x-ico" href="./logo.png">
+    <link rel="icon" type="image/x-ico" href="./logo.jpg">
     <style>  
       body {
       margin:0;
