--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     padding:10px;
     ">
     <ul id="topul">
-      <li><img src="./logo.pnd" width="40px" height="40px" alt="?"></li>
+      <li><img src="./logo.jpg" width="40px" height="40px" alt="?"></li>
       <li><p class="topp"><a class="topa" href="https://klhjh.github.io/video-world">首 页</a></p></li>
       <li><p class="topp"><a class="topa" href="">shorts</a></p></li>
       <li><p class="topp"><a class="topa" href="https://klhjh.github.io/blkman/about">关于</a></p></li>
